tests/baselines/reference/emptyMemberAccess.errors.txt
emptyMemberAccess.ts(3,5): error TS1109: Expression expected.


==== emptyMemberAccess.ts (1 errors) ====
    function getObj() {
    
       ().toString();
        ~
!!! error TS1109: Expression expected.
    
    }
     